Bug 71866 - Indexes and TOX do not update
Summary: Indexes and TOX do not update
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha1
Hardware: Other All
: high major
Assignee: Michael Stahl
URL:
Whiteboard: target:4.3.0 target:4.2.0.1
Keywords: regression
: 72279 72441 72484 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-11-21 09:21 UTC by pierre-yves samyn
Modified: 2024-09-11 08:51 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Document with Indexes and no page Number (23.38 KB, application/vnd.oasis.opendocument.text)
2013-11-21 09:21 UTC, pierre-yves samyn
Details
With page number (22.35 KB, application/vnd.oasis.opendocument.text)
2013-11-23 14:17 UTC, Jacques Guilleron
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2013-11-21 09:21:59 UTC
Created attachment 89578 [details]
Document with Indexes and no page Number

Hello

Platform Windows 7/64 and Version: 4.2.0.0.alpha1+
Build ID: 6788b92e15889beb151baf2b8ca8719f6ea38481
TinderBox: Win-x86@39, Branch:master, Time: 2013-11-21_02:40:15

Steps to reproduce :
1. Create a writer document
2. Insert an object to generate an index (title, illustration, alphabetical index)
3 Insert the index (include page numer is a default entry)

Expected result: page number included in the index
Actual result: no page number

The attached document includes toc, illustration & alphabetical index 
Regards
Pierre-Yves
Comment 1 Jacques Guilleron 2013-11-23 13:34:09 UTC
Hello Pierre-Yves,

I can't insert an index or a TOC. Any action into Insert Index/Table freeze application.
Can you provide an attachment before updating, with page numbers available?

LO 4.2.0.0.alpha1+
Build ID: 0adea894d6d55ead0ff58c76ce142f5d4e1014a4
TinderBox: Win-x86@47-TDF, Branch:master, Time: 2013-11-17_03:47:26
Windows 7 Home Premium

Jacques
Comment 2 Jacques Guilleron 2013-11-23 14:17:19 UTC
Created attachment 89681 [details]
With page number
Comment 3 Jacques Guilleron 2013-11-23 14:45:56 UTC
Hi,

Confirmed with second attachment with page number available. In toc, illustration and alphabetical indexes, page number disappears on index updating. Observe too hyperlinks are deleted and their names replaced by one shortcut (Navigator).

LO 4.2.0.0.alpha1+
Build ID: 0adea894d6d55ead0ff58c76ce142f5d4e1014a4
TinderBox: Win-x86@47-TDF, Branch:master, Time: 2013-11-17_03:47:26
Windows 7 Home Premium

Regards,

Jacques
Comment 4 pierre-yves samyn 2013-11-24 07:45:30 UTC
Hello

(In reply to comment #3)
> Confirmed with second attachment with page number available. 

Thank you for the test.

I also reproduce on windows 7/64 with 
Version: 4.2.0.0.beta1
Build ID: f4ca7b35f580827ad2c69ea6d29f7c9b48ebbac7

Regards
Pierre-Yves
Comment 5 Peter Maunder 2013-11-29 15:42:14 UTC
Same problem with Ubuntu 12.04 and Version: 4.2.0.0.beta1
Build ID: f4ca7b35f580827ad2c69ea6d29f7c9b48ebbac7

Twelve page report, index over 2 pages, created in 4.1.3. No problem updating with 4.1.3. Page number disappears on updating index. Update index takes alignment characteristics from Page Heading paragraph settings. Centred for Heading 3, aligned left for 4. Just using heading levels 3 and 4.
Comment 6 geraldg 2013-12-02 20:04:11 UTC
The problem still exists in 4.2 beta (deb).

If I update an index (also from an earlier version of LO), page numbers will be lost.
If I save in 4.2 - and open in 4.1 - and update the index
page numbers will be shown - but spaces (I set in 4.1) in front and behind the tab are lost.
Comment 7 geraldg 2013-12-05 17:55:24 UTC
Still exists in beta 2.

In this version the table index lost all information (inclusive the title).

Best regards

Gerald
Comment 8 Michael Stahl 2013-12-05 22:34:59 UTC
caused by OUString conversion commit d6e321f8264188ce8371c060ebeb75b213f0c90f

fixed on master.
Comment 9 Commit Notification 2013-12-05 22:35:44 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2e7bb8d12647e1c4adb4fa86961b4839afaca253

fdo#71866: sw: un-break index updates



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2013-12-05 22:53:47 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=091b734c82630b7d88de725ec0e41e76f4017f86&h=libreoffice-4-2

fdo#71866: sw: un-break index updates


It will be available in LibreOffice 4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Michael Stahl 2013-12-06 11:22:59 UTC
*** Bug 72279 has been marked as a duplicate of this bug. ***
Comment 12 Jacques Guilleron 2013-12-08 10:39:47 UTC
*** Bug 72441 has been marked as a duplicate of this bug. ***
Comment 13 pierre-yves samyn 2013-12-08 16:14:59 UTC
*** Bug 72484 has been marked as a duplicate of this bug. ***
Comment 14 pierre-yves samyn 2013-12-14 08:58:17 UTC
Hello

WORKSFORME on windows 7/64 with Version: 4.2.0.0.beta2+
Build ID: 4031765b004dded31f04c54f9a055b7a3d0053f2
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2013-12-14_01:35:27

Thank you
Regards
Pierre-Yves
Comment 15 Peter Maunder 2013-12-20 16:45:45 UTC
Thank you, fixed on Ubuntu 12.04 4.2.0 RC1. Peter
Comment 16 geraldg 2014-01-14 22:43:21 UTC
In 4.2.0 RC 2
Page numbers will be shown but there are no numbers of chapters after updating the index.
I can insert the numbers in the dialogue, they will be shown. When I recall the dialogue and insert a blank between the number of the chapters and the name of the chapters and say OK the numbers of the chapters are lost.
If I insert any sign between '#' and 'LE' the whole entry in the index is empty.
Comment 17 Michael Stahl 2014-01-15 09:36:41 UTC
this bug is about index and TOC not updating _at_ _all_
Comment 18 pierre-yves samyn 2014-01-24 09:35:27 UTC
Hello

(In reply to comment #14)
> WORKSFORME on windows 7/64 with Version: 4.2.0.0.beta2+
> Build ID: 4031765b004dded31f04c54f9a055b7a3d0053f2
> TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2013-12-14_01:35:27
> Thank you

Still ok on windows 7/64 wiht Version: 4.2.0.3
Build ID: c63c03decdf780d8fb80823950665b782ec9ecd0

I close, thank you again :)

Regards
Pierre-Yves