fdo#71866: sw: un-break index updates

SwTOXBaseSection::GenerateText() wants to operate directly on
SwTxtNode::m_Text and accepts no substitutes such as a temporary string
on the stack; this regression shows that developers often
significantly underestimate the craziness of the existing code.

(regression from d6e321f8264188ce8371c060ebeb75b213f0c90f)

Change-Id: I01b831f35a52bde207a7db8cae9d4aadb826b2d8